# BRIDGE

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/bridge/: SKILL.md
.claude/skills/bridge-cls/: SKILL.md
.claude/skills/bridge-identity/: SKILL.md
.claude/skills/bridge-step0/: SKILL.md
.claude/skills/bridge-step1/: SKILL.md
.claude/skills/bridge-step2/: SKILL.md
.claude/skills/bridge-step3/: SKILL.md
.claude/skills/cls-run/: SKILL.md
.claude/skills/identity-run/: SKILL.md
.claude/skills/report-review/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: README.md  bridge.example.yaml  bridge.minimal.yaml  report-smoke.yaml
configs/environments/: pytorch-linux.yml
configs/fixtures/minimal/: query.h5ad  ref_sceniclike.h5ad  reference.h5ad
docs/: agent_demo.md  experimental_scope.md  formal_workflows.md  real_runtime.md  roadmap.md  roadmap_step1.md  skills.md  thesis_to_code.md
models/: README.md  assets.json
notebooks/: README.md
scripts/: download_model_assets.py
src/bridge/: __init__.py  __main__.py  cli.py
src/bridge/cls/: __init__.py  api.py  base.py  component_a.py  component_b.py  component_c.py  component_d.py  component_e.py  component_f.py  report.py
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_cls_api.py  test_cls_common.py  test_cls_report.py  test_config.py  test_config_loading.py  test_identity_adapters.py  test_identity_api.py  test_identity_calibration.py  test_identity_report.py  test_identity_selection.py  test_identity_serialization.py  test_identity_uncertainty.py  test_notebook_report_guidance.py  test_prescreen_annotations.py  test_prescreen_api.py  test_prescreen_report.py  test_report_workflow.py  test_report_workflow_step2.py  test_reporting_api.py  test_smoke.py  test_smoke_component_a.py  test_workflow_validation.py
tests/data/: real_batch_fixture.yaml  report_fixture.yaml  report_fixture_step2.yaml
(+48 files in other folders)
